TEST_PROGRAMS/VALID/05/for_while_loop.go
/* Loops */

package main

func main() {
	sum := 0

	for sum < 10 {
		sum++
	}

}
