TEST_PROGRAMS/INVALID/05/multiple_unary_plus_no_paren.go
package main

func main() {
  // Error: cannot have multiple unary plus without parenthesis
  println(++10)
}
